# llm-radio

./: .env.sample  .gitignore  .pre-commit-config.yaml  DESIGN.md  LICENSE  README.md  pyproject.toml
.roo/: mcp.json
scripts/: run_servers.py
src/llm_radio/: __init__.py  api_server.py  cli.py  client.py  dns_server.py
tests/: test_api_server.py  test_client.py  test_dns_server.py
