[project]
name = "llm-radio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Niels van Galen Last", email = "nvangalenlast@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "dspy>=2.6.27",
    "fastapi[standard]>=0.116.1",
    "mlflow>=3.2.0",
]

[project.scripts]
llm-radio = "llm_radio:main"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black[jupyter]>=25.1.0",
    "isort>=6.0.1",
    "jupyterlab>=4.4.5",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "ruff>=0.12.7",
    "tqdm>=4.67.1",
]
